src/pages/foodDetail/FoodDetailPage.scss
@import "../../index.scss";

.page-container {

    .food_detail {
        width: 100%;
        height: 100vh;
        background-color: $light-blue;
        display: flex;
        justify-content: space-around;
        align-items: end;

        .details {
            width: 731px;
            height: 621px;
            background: $dark-blue;
            border-radius: 16px;
            overflow-y: auto;

            .size,
            .milk {
                display: flex;
                justify-content: space-evenly;
                padding-top: 40px;
                margin-bottom: 16px;

                .size-container {
                    padding-right: 120px;

                }

                .container {
                    display: flex;
                    align-items: center;
                    gap: 16px;
                }

                .options {
                    display: flex;
                    gap: 18px;
                    justify-content: end;

                    .option {
                        width: 120px;
                        height: 44px;
                        background: transparent;
                        border: 1px solid $cream;
                        border-radius: 5px;
                        color: $cream;
                        font-size: 16px;
                        font-weight: 700;

                        .extra-price {
                            font-weight: 400;
                        }

                        &:hover {
                            cursor: pointer;
                            border: none;
                            background-color: $orange;
                        }
                    }
                }
            }

            .btn-container {
                width: 100%;
                display: flex;
                justify-content: center;
                align-items: center;
                padding: 50px;

                .add-cart-btn {
                    background-color: $orange;
                    color: $cream;
                    border: none;
                    border-radius: 16px;
                    width: 300px;
                    height: 46px;
                    font-family: "Red Hat Display";
                    font-weight: 700;
                    font-size: 20px;
                    cursor: pointer;
                }
            }
        }
    }

}

.separator {
    width: 85%;
    margin: 0 auto;
}



.text {
    color: $cream;
    padding: 10px;

    .text {

        .recicle-icon {
            padding-left: 12px;
        }

        .recicle-text {
            font-family: Stacion;
            font-size: 14px;
            font-weight: 400;
            text-align: center;
            align-items: center;
            width: 230px;
        }
    }
}


.extra {
    display: flex;
    align-items: center;
    gap: 14px;
    justify-content: center;
    font-family: "Red Hat Display";
    font-weight: 700;
    color: $cream;

    .checkbox {
        width: 21px;
        height: 21px;
    }

    .extra-options {
        padding-left: 240px;

        .extra {
            margin: 24px;

        }


    }

    .lid-options {
        padding-left: 90px;

        .extra {
            margin: 24px;
        }
    }
}

.detail-card {
    padding-left: 45px;
}

.icon {
    width: 48px;
    height: 48px;
}

.complement {
    height: 255px;
}

.complement_title {
    padding-left: 130px;
}

.cards {
    display: flex;
    margin: 10px 10px 10px 20px;

}

.recicle {
    margin: 0 5px;
}

